force-app/main/default/objects/ChargeOver_Subscription__c/ChargeOver_Subscription__c.object-meta.xml
<CustomObject>
    <label>ChargeOver Subscription</label>
    <nameField>
        <label>ChargeOver Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ChargeOver Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>