force-app/main/default/objects/ChargeOver_Subscription__c/fields/Active_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Active_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes which Active Subscription this record is being aggregated into.</description>
    <label>Active Subscription</label>
    <referenceTo>Active_Subscriptions__c</referenceTo>
    <relationshipLabel>ChargeOver Subscriptions</relationshipLabel>
    <relationshipName>ChargeOver_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>