force-app/main/default/objects/ChargeOver_Subscription__c/fields/Amount_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Amount_Overdue__c</fullName>
    <description>The amount from the related invoices that is overdue.</description>
    <label>Amount Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>