force-app/main/default/objects/ChargeOver_Subscription__c/fields/Billing_Street_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_Line_2__c</fullName>
    <label>Billing Street Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>