force-app/main/default/objects/ChargeOver_Subscription__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <length>64</length>
    <type>Text</type>
</CustomField>