force-app/main/default/objects/ChargeOver_Subscription__c/fields/Converted_From_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Converted_From_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The subscription used as the source for this new subscription</description>
    <label>Converted From Subscription</label>
    <referenceTo>ChargeOver_Subscription__c</referenceTo>
    <relationshipLabel>ChargeOver Subscriptions</relationshipLabel>
    <relationshipName>ChargeOver_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>