force-app/main/default/objects/ChargeOver_Subscription__c/fields/Date_of_Next_Invoice_Generation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Next_Invoice_Generation__c</fullName>
    <label>Date of Next Invoice Generation</label>
    <type>Date</type>
</CustomField>