force-app/main/default/objects/ChargeOver_Subscription__c/fields/Date_Time_Invoice_Being_Held_Until__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Invoice_Being_Held_Until__c</fullName>
    <label>Date/Time Invoice Being Held Until</label>
    <type>DateTime</type>
</CustomField>