force-app/main/default/objects/ChargeOver_Subscription__c/fields/Early_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Early_Renewal_Date__c</fullName>
    <description>If populated, the date which a client was renewed early</description>
    <inlineHelpText>If populated, this is the date in which a client was renewed early</inlineHelpText>
    <label>Early Renewal Date</label>
    <type>Date</type>
</CustomField>