force-app/main/default/objects/ChargeOver_Subscription__c/fields/IS_FROM_CHARGEOVER__c.field-meta.xml
<CustomField>
    <fullName>IS_FROM_CHARGEOVER__c</fullName>
    <defaultValue>false</defaultValue>
    <description>INTERNAL SYNC - do not edit manually</description>
    <label>Is from ChargeOver?</label>
    <type>Checkbox</type>
</CustomField>