force-app/main/default/objects/ChargeOver_Subscription__c/fields/Original_Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Subscription_Start_Date__c</fullName>
    <description>The date of the original subscription start date</description>
    <label>Original Subscription Start Date</label>
    <type>DateTime</type>
</CustomField>