force-app/main/default/objects/ChargeOver_Subscription__c/fields/Paused_Date__c.field-meta.xml
<CustomField>
    <fullName>Paused_Date__c</fullName>
    <description>The date a subscription is marked as Paused/Suspended</description>
    <label>Paused Date</label>
    <type>Date</type>
</CustomField>