force-app/main/default/objects/ChargeOver_Subscription__c/fields/Refund_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Refund_Percentage__c</fullName>
    <description>The percentage of a ChargeOver Subscription that has been refunded out of the total amount paid.</description>
    <formula>IF( AND( NOT(ISBLANK(Cancellation_Date__c)), Total_Paid_Amount__c = 0 ),
1,
((-1* Total_Refund_Amount__c )/ Total_Paid_Amount__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>