force-app/main/default/objects/ChargeOver_Subscription__c/fields/Sale_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Sale_Completed_By__c</fullName>
    <description>The source of the subscription&apos;s original sale</description>
    <label>Sale Completed By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Quote Link</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>