force-app/main/default/objects/ChargeOver_Subscription__c/fields/Sale_Completed_By_Detail__c.field-meta.xml
<CustomField>
    <fullName>Sale_Completed_By_Detail__c</fullName>
    <description>The details of the Sale Completed By field, which may contain any specific website name, partner, or other source</description>
    <label>Sale Completed By Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>