force-app/main/default/objects/ChargeOver_Subscription__c/fields/Sale_Completed_By_Raw__c.field-meta.xml
<CustomField>
    <fullName>Sale_Completed_By_Raw__c</fullName>
    <description>The raw value of the Sale Completed By field. May contain information to be split into more descriptive fields</description>
    <label>Sale Completed By Raw</label>
    <length>255</length>
    <type>Text</type>
</CustomField>