force-app/main/default/objects/ChargeOver_Subscription__c/fields/Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_End_Date__c</fullName>
    <description>The Date a client&apos;s service ends based on their most recent invoice.</description>
    <label>Service End Date</label>
    <type>Date</type>
</CustomField>