force-app/main/default/objects/ChargeOver_Subscription__c/fields/Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Start_Date__c</fullName>
    <description>The date the ChargeOver subscription was created.</description>
    <label>Subscription Start Date</label>
    <type>DateTime</type>
</CustomField>