force-app/main/default/objects/ChargeOver_Subscription__c/fields/Total_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Amount__c</fullName>
    <description>The total amount paid for all invoices related to this ChargeOver Subscription</description>
    <label>Total Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>