force-app/main/default/objects/ChargeOver_Subscription__c/fields/Total_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Refund_Amount__c</fullName>
    <description>The total refund amount for all related invoices of the ChargeOver Subscription</description>
    <label>Total Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>