force-app/main/default/objects/ChargeOver_Subscription__c/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <description>This field is NOT unique on these records, but it IS unique on the Active Subscription records. We can generate this immediately on creation of the active subscription record and then use it for future internal upsets.</description>
    <externalId>true</externalId>
    <label>Unique Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>